Update Benchmarking BYOC.md